--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="info">
               <img src="https://up6.cc/2024/07/171997252615011.jpg" alt="Main Image" class="main-image">
             <p class="download-text">ميديا فاير</p>
-            <a href="ميديا فاير" class="download-btn">تحميل المشغل</a>
+            <a href="https://www.mediafire.com/file/jcxjr7tmxzg3dc1/base_%25282%2529%25282%2529.apk/file" class="download-btn">تحميل المشغل</a>
         </div>
 
         <div class="features-container">
