--- a/index.html
+++ b/index.html
@@ -216,21 +216,25 @@
 
 
 
-</head> 
+        }
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
 <body>
     <header>
-        <h1></h1>
+        <h>AnimeHosh</h1>
     </header>
     <div class="content">
         <div class="info">
-              <img src="https://up6.cc/2024/07/171997252615011.jpg" alt="Main Image" class="main-image">
-            <p class="download-text">ميديا فاير</p>
-            <a href="https://www.mediafire.com/file/jcxjr7tmxzg3dc1/base_%25282%2529%25282%2529.apk/file" class="download-btn">تحميل المشغل</a>
+            <img src="https://up6.cc/2024/07/171995029894551.jpg" alt="Main Image" class="main-image">
+            <p class="download-text">Googledrive</p>
+            <a href="https://drive.google.com/uc?export=download&id=1aqk6w2GRRBrJ552SSj-o6b3UdIjNVLNV" class="download-btn">تحميل المشغل</a>
         </div>
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+ 
 
-        <div class="features-container">
-            <div class="features">
-                <div class="feature">
+
                     
                     <h2>المشغل</h2> 
                     <p>تحتاج تثبيت المشغل الخاص بنا لكي تشاهد الحلقات بسلاسة</p>
